--- a/03_js/event/06_todo.html
+++ b/03_js/event/06_todo.html
@@ -40,6 +40,29 @@
     }
 
     formTag.addEventListener('submit', addTodo)
+
+    formTag.addEventListener('submit', function (event) {
+      // console.log(event)
+      event.preventDefault()
+
+      const inputTag = document.querySelector('.inputData')
+      const data = inputTag.value
+      // console.log(data)
+
+      if (data.trim()) {
+        const liTag = document.createElement('li')
+        liTag.innerText = data
+
+        const ulTag = document.querySelector('ul')
+        ulTag.appendChild(liTag)
+
+        event.target.reset()
+      } else {
+        alrert('내용을 입력하세요')
+      }
+      event.target.reset()
+    })
+
   </script>
 </body>
 
